cmake_minimum_required(VERSION 3.10)

project(EES2D LANGUAGES CXX)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
add_compile_options(-Wall)
add_compile_options(-Wextra)
add_compile_options(-Isrc/)
add_subdirectory(src)
option(PACKAGE_TESTS "Build the tests" ON)
if (PACKAGE_TESTS)
    # include(CTest)
    enable_testing()
    include(GoogleTest)
    add_subdirectory(tests)
endif ()